--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      </script>
     <script type="text/template" id="userDetail-tpl">
         <ol class="breadcrumb">
-            <li><a href="">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li class="active">{{name}}</li>
         </ol>
         <div class="page-header">
